fix vertical align on manuscript manager column titles

--- a/app/assets/stylesheets/tahi.css.scss
+++ b/app/assets/stylesheets/tahi.css.scss
@@ -168,7 +168,7 @@ textarea {
     position: absolute;
     display: none;
     top: 5px;
-    right: 20px;
+    right: 10px;
     font-size: 14px;
     color: #FFFFFF;
   }
